# pharm-agent

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/: data_loader.py
