[project]
name = "pharm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.3.0",
    "gradio>=6.14.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.2.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
]
